Fix wrapping in header nav

--- a/layouts/style.css
+++ b/layouts/style.css
@@ -105,6 +105,7 @@ header nav ul {
   gap: 1rem;
   height: 45%;
   align-items: flex-end;
+  flex-wrap: wrap;
 }
 
 footer {
